--- a/src/style/common.less
+++ b/src/style/common.less
@@ -1,8 +1,12 @@
+@import "../style/default.less";
 .container {
   .nav-left {
     height: calc(100vh);
+    background-color: #001529;
   }
   .main {
+    background-color: @colorJ;
+    height: calc(100vh);
     .content {
       position: relative;
       padding: 20px;
