--- a/src/style/common.less
+++ b/src/style/common.less
@@ -7,6 +7,7 @@
   .main {
     background-color: @colorJ;
     height: calc(100vh);
+    overflow: auto;
     .content {
       position: relative;
       padding: 20px;
