--- a/src/style/common.less
+++ b/src/style/common.less
@@ -1,4 +1,5 @@
-@import "../style/default.less";
+@import "../style/default";
+@import "../style/loading";
 .container {
   .nav-left {
     height: calc(100vh);
