--- a/src/style/common.less
+++ b/src/style/common.less
@@ -1,5 +1,8 @@
 @import "../style/default";
 @import "../style/loading";
+ul li {
+  list-style: none;
+}
 .container {
   .nav-left {
     height: calc(100vh);
