--- a/src/pages/order/detail.less
+++ b/src/pages/order/detail.less
@@ -32,7 +32,7 @@
   }
 }
 
-//.order-map {
-//  height: 450px;
-//  margin: 25px -31px 0;
-//}
+.order-map {
+  height: 450px;
+  margin: 25px -31px 0;
+}
