--- a/src/components/Footer/index.less
+++ b/src/components/Footer/index.less
@@ -2,3 +2,17 @@
   padding: 40px 0;
   text-align: center;
 }
+
+.footer2 {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 60px;
+  padding-top: 20px;
+  background: rgba(21, 23, 20, 0.5);
+  font-size: 12px;
+  letter-spacing: 0.15em;
+  color: #ffffff;
+  text-align: center;
+}
