--- a/src/style/common.less
+++ b/src/style/common.less
@@ -9,7 +9,7 @@ ul li {
     background-color: #001529;
   }
   .main {
-    background-color: @colorJ;
+    background-color: @colorL;
     height: calc(100vh);
     overflow: auto;
     .content {
